src/objects/AccountTypeSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is a matrix of Account Type selections. This allows Account Types  to be mapped and selected based on Vendor and Bill Method.
Defining Below As Name field Length is limited to 40 
CT1 - Small Stable Contract - Evergreen 
CT2 - Small Stable Contract - MTM Renewal 
CT3 - Large Stable Contract 
CT4 - Large Stable PT-C Contract 
CT5 - Hybrid 
CT6 - Block and Index
CT7 - Non Standard</description>
    <fields>
        <fullName>AccountTypeCode__c</fullName>
        <description>The Account Type Code to use based on the Vendor and the Bill Method.</description>
        <inlineHelpText>The Account Type Code to use based on the Vendor and the Bill Method.</inlineHelpText>
        <label>Account Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Method__c</fullName>
        <label>Bill Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <label>Contract Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>The Type of Contract that Maps to the particular bill method and Vendor (or Service Territory)</description>
        <inlineHelpText>The Type of Contract that Maps to the particular bill method and Vendor (or Service Territory)</inlineHelpText>
        <label>Contract Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceTerritory__c</fullName>
        <description>The Service Territory used to reference in order to find the correct Account Type Code.</description>
        <inlineHelpText>The Service Territory used to reference in order to find the correct Account Type Code.</inlineHelpText>
        <label>Service Territory</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Account Type Setting</label>
</CustomObject>